// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`injecting with \`propKey\` should match snapshot 1`] = `
<withProps(omitProps(TestComponent))
  @flopflip/flags={
    Object {
      "aFeatureToggle": true,
    }
  }
>
  <omitProps(TestComponent)
    @flopflip/flags={
      Object {
        "aFeatureToggle": true,
      }
    }
    fooFlagPropName={true}
  >
    <TestComponent
      fooFlagPropName={true}
    >
      Test
    </TestComponent>
  </omitProps(TestComponent)>
</withProps(omitProps(TestComponent))>
`;

exports[`injecting without \`propKey\` should match snapshot 1`] = `
<withProps(omitProps(TestComponent))
  @flopflip/flags={
    Object {
      "aFeatureToggle": true,
    }
  }
>
  <omitProps(TestComponent)
    @flopflip/flags={
      Object {
        "aFeatureToggle": true,
      }
    }
    isFeatureEnabled={true}
  >
    <TestComponent
      isFeatureEnabled={true}
    >
      Test
    </TestComponent>
  </omitProps(TestComponent)>
</withProps(omitProps(TestComponent))>
`;
